Fix for bug 231001: [rte] HTMLArea (Midas) broken since 20040114 r=brade sr=bz